// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusDropdown toggle renders as expected when value is null 1`] = `
<DocumentFragment>
  <div
    class="dropdown css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-4-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      class="status-dropdown__control css-uuqjpg-Control"
    >
      <button
        class="button dropdown-button tertiary margin-bottom-none"
        style="padding-top: 0px; padding-bottom: 0px;"
        type="button"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
        >
          <span
            style="margin-top: 1rem; margin-bottom: 1rem; margin-right: 1rem; overflow: auto; flex-grow: 1; text-align: left;"
          >
            Status
          </span>
          <div
            style="width: 0px; height: 0px;"
          >
            <div
              class="status-dropdown__value-container css-1fdsijx-ValueContainer"
            >
              <div
                class="status-dropdown__placeholder css-1jqq78o-placeholder"
                id="react-select-4-placeholder"
              />
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-4-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-readonly="true"
                class="css-mohuvp-dummyInput-DummyInput"
                id="react-select-4-input"
                inputmode="none"
                role="combobox"
                tabindex="0"
                value=""
              />
            </div>
          </div>
          <span
            style="flex-shrink: 0; font-size: 0px;"
          >
            <svg
              style="width: .75rem; height: .75rem;"
            >
              <use
                xlink:href="#i-arrow-down"
              />
            </svg>
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusDropdown toggle renders with additional styles when provided 1`] = `
<DocumentFragment>
  <div
    class="dropdown css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-7-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      class="status-dropdown__control css-uuqjpg-Control"
    >
      <button
        class="button dropdown-button expand tertiary tight-padding tiny margin-bottom-none"
        style="padding-top: 0px; padding-bottom: 0px;"
        type="button"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
        >
          <span
            style="margin-top: 0.5rem; margin-bottom: 0.5rem; margin-right: 0.5rem; overflow: auto; flex-grow: 1; text-align: left;"
          >
            Status
          </span>
          <div
            style="width: 0px; height: 0px;"
          >
            <div
              class="status-dropdown__value-container css-1fdsijx-ValueContainer"
            >
              <div
                class="status-dropdown__placeholder css-1jqq78o-placeholder"
                id="react-select-7-placeholder"
              />
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-7-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-readonly="true"
                class="css-mohuvp-dummyInput-DummyInput"
                id="react-select-7-input"
                inputmode="none"
                role="combobox"
                tabindex="0"
                value=""
              />
            </div>
          </div>
          <span
            style="flex-shrink: 0; font-size: 0px;"
          >
            <svg
              style="width: .75rem; height: .75rem;"
            >
              <use
                xlink:href="#i-arrow-down"
              />
            </svg>
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusDropdown toggle renders with additional styles when provided 2`] = `
<DocumentFragment>
  <div
    class="dropdown css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-7-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      class="status-dropdown__control css-uuqjpg-Control"
    >
      <button
        class="button dropdown-button expand tertiary small margin-bottom-none"
        style="padding-top: 0px; padding-bottom: 0px;"
        type="button"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
        >
          <span
            style="margin-top: 1rem; margin-bottom: 1rem; margin-right: 1rem; overflow: auto; flex-grow: 1; text-align: left;"
          >
            Status
          </span>
          <div
            style="width: 0px; height: 0px;"
          >
            <div
              class="status-dropdown__value-container css-1fdsijx-ValueContainer"
            >
              <div
                class="status-dropdown__placeholder css-1jqq78o-placeholder"
                id="react-select-7-placeholder"
              />
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-7-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-readonly="true"
                class="css-mohuvp-dummyInput-DummyInput"
                id="react-select-7-input"
                inputmode="none"
                role="combobox"
                tabindex="0"
                value=""
              />
            </div>
          </div>
          <span
            style="flex-shrink: 0; font-size: 0px;"
          >
            <svg
              style="width: .75rem; height: .75rem;"
            >
              <use
                xlink:href="#i-arrow-down"
              />
            </svg>
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusDropdown toggle renders with left-aligned text 1`] = `
<DocumentFragment>
  <div
    class="dropdown css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-6-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      class="status-dropdown__control css-uuqjpg-Control"
    >
      <button
        class="button dropdown-button tertiary margin-bottom-none"
        style="padding-top: 0px; padding-bottom: 0px;"
        type="button"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
        >
          <span
            style="margin-top: 1rem; margin-bottom: 1rem; margin-right: 1rem; overflow: auto; flex-grow: 1; text-align: left;"
          >
            Status
          </span>
          <div
            style="width: 0px; height: 0px;"
          >
            <div
              class="status-dropdown__value-container css-1fdsijx-ValueContainer"
            >
              <div
                class="status-dropdown__placeholder css-1jqq78o-placeholder"
                id="react-select-6-placeholder"
              />
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-6-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-readonly="true"
                class="css-mohuvp-dummyInput-DummyInput"
                id="react-select-6-input"
                inputmode="none"
                role="combobox"
                tabindex="0"
                value=""
              />
            </div>
          </div>
          <span
            style="flex-shrink: 0; font-size: 0px;"
          >
            <svg
              style="width: .75rem; height: .75rem;"
            >
              <use
                xlink:href="#i-arrow-down"
              />
            </svg>
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusDropdown toggle renders without any additional button styles when none are provided 1`] = `
<DocumentFragment>
  <div
    class="dropdown css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-5-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      class="status-dropdown__control css-uuqjpg-Control"
    >
      <button
        class="button dropdown-button tertiary margin-bottom-none"
        style="padding-top: 0px; padding-bottom: 0px;"
        type="button"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between; width: 100%;"
        >
          <span
            style="margin-top: 1rem; margin-bottom: 1rem; margin-right: 1rem; overflow: auto; flex-grow: 1; text-align: left;"
          >
            Status
          </span>
          <div
            style="width: 0px; height: 0px;"
          >
            <div
              class="status-dropdown__value-container css-1fdsijx-ValueContainer"
            >
              <div
                class="status-dropdown__placeholder css-1jqq78o-placeholder"
                id="react-select-5-placeholder"
              />
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-5-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-readonly="true"
                class="css-mohuvp-dummyInput-DummyInput"
                id="react-select-5-input"
                inputmode="none"
                role="combobox"
                tabindex="0"
                value=""
              />
            </div>
          </div>
          <span
            style="flex-shrink: 0; font-size: 0px;"
          >
            <svg
              style="width: .75rem; height: .75rem;"
            >
              <use
                xlink:href="#i-arrow-down"
              />
            </svg>
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
